# MultiThreadedWebApp

./: Cargo.toml  README.md  config.rs  main.rs  models.rs  package.json  routes.rs
frontend/: index.html  main.js  styles.css
