[package]
name = "multithreaded_web_app"
version = "0.1.0"
authors = ["Megan444x"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.5.0"
diesel = { version = "1.4.7", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"